--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,8 +10,12 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "cors": "^2.8.5",
+    "db": "*",
     "express": "^4.21.2",
-    "db" : "*"
+    "jsonwebtoken": "^9.0.2"
   }
 }
